@@ -21,6 +21,7 @@ Enhancements::
 Bug Fixes::
 
 * keep caret between items in menu macro with previous item if items wrap
+* draw border on heading (section title or discrete heading) if it is advanced to next page (#2322)
 
 == 2.3.0 (2022-08-16) - @mojavelinux
 
